--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ __pycache__/
 # Django
 *.log
 local_settings.py
-db.sqlite3
+# db.sqlite3
 
 # Environment
 .env
@@ -22,7 +22,7 @@ db.sqlite3
 .DS_Store
 
 # Poetry
-poetry.lock
+# poetry.lock
 
 # Virtual Environments
 .env/
